fix: improve contrast and hover effect in form block

--- a/blocks/donation-form/edit/scss/controls.scss
+++ b/blocks/donation-form/edit/scss/controls.scss
@@ -10,7 +10,7 @@
 		width: 100%;
 		height: 100%;
 		z-index: 9999;
-		background-color: rgba(0, 0, 0, 0.6);
+		background-color: rgba(0, 0, 0, 0.8);
 		text-align: center;
 		color: #fff;
 		opacity: 0;
@@ -37,6 +37,10 @@
 			color: #fff;
 			text-decoration: none;
 			outline: 0;
+
+			&:hover {
+				color: #fff;
+			}
 		}
 
 		& > * {
@@ -71,7 +75,7 @@
 
 			&:hover {
 				transition: background-color 0.3s ease;
-				background-color: rgba(0, 0, 0, 0.3);
+				background-color: rgba(0, 0, 0, 0.5);
 			}
 		}
 	}
@@ -82,7 +86,6 @@
 
 	&.isSelected:hover .give-form-wrap {
 		transition: transform 0.3s ease, opacity 0.3s ease;
-		transform: scale(0.85);
 		opacity: 0.3;
 	}
 
